<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:defaultValue="@string/pref_autoDetect"
        android:entries="@array/modes"
        android:entryValues="@array/modes"
        android:key="pref_mode"
        android:title="@string/pref_mode" />
    <me.joebass.wearbrightness.SeekBarPreference
        android:defaultValue="230"
        android:max="255"
        android:key="pref_inVehicle"
        android:title="@string/pref_inVehicle" />
    <me.joebass.wearbrightness.SeekBarPreference
        android:defaultValue="225"
        android:max="255"
        android:key="pref_onBicycle"
        android:title="@string/pref_onBicycle" />
    <me.joebass.wearbrightness.SeekBarPreference
        android:defaultValue="180"
        android:max="255"
        android:key="pref_onFoot"
        android:title="@string/pref_onFoot" />
    <me.joebass.wearbrightness.SeekBarPreference
        android:defaultValue="128"
        android:max="255"
        android:key="pref_unknown"
        android:title="@string/pref_unknown" />
    <me.joebass.wearbrightness.SeekBarPreference
        android:defaultValue="255"
        android:max="255"
        android:key="pref_manual"
        android:title="@string/pref_manual" />
</PreferenceScreen>